--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,8 +11,8 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-set-option -g allow-rename off
-setw -g automatic-rename off
+set-option -g allow-rename on
+setw -g automatic-rename on
 
 set-option -g status-position top
 
